# SMD2GC

./: .gitmodules  .project  CMakeLists.txt  README.md  tusb_config.h
KiCad/: SMD2GC.kicad_pcb  SMD2GC.kicad_pro  SMD2GC.kicad_sch  fp-lib-table  sym-lib-table
include/communication_protocols/: joybus.hpp
include/communication_protocols/joybus/: gcReport.hpp
src/: CMakeLists.txt  arena_allocator.cpp  arena_allocator.h  hid_dumps.h  hid_gamecube_mapping.cpp  hid_gamecube_mapping.h  hid_parser.cpp  hid_parser.h  hid_tests.cpp  main.cpp  ps3.cpp  ps3.h  sega_mega_drive.cpp  sega_mega_drive.h
src/communication_protocols/: joybus.cpp
